example3: subject from __ (reLex-jolux-4-zh)
https://github.com/zazuko/reLex-jolux-4-zh/commit/ac717c3a92fd90146a757adfced2842bb3b55da0
https://github.com/zazuko/reLex-jolux-4-zh/blob/main/input/2024-03-08%20AKN4ZH%20ACT%20A0.xml

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "to-file": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main.ttl",
     "to-file1": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main1.ttl",
     "to-file2": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main2.ttl",
+    "to-file3": "mkdir -p output && barnard59 run -v --pipeline=http://example.org/pipeline/toFile pipelines/main3.ttl",
     "file-to-store": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl --variable=ENDPOINT_URL --variable=ENDPOINT_USER --variable=ENDPOINT_PASSWORD",
     "file-to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/fileToStore pipelines/main.ttl",
     "to-store-dev": "barnard59 run -v --pipeline=http://example.org/pipeline/toStore pipelines/main.ttl",
